--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	
+	<title>True Page</title>
 </head>
 	<body>	
       <h1 style = "color: Blue">HELLO!!!</h1>	
