--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 	<body>	
       <h1 style = "color: Blue">HELLO!!!</h1>
-      <h2 style = "color: Red">HELLO!!!</h2>
+      <h2 style = "color: Black">HELLO!!!</h2>
 	</body>
 </html>
