--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 	<body>	
       <h1 style = "color: Blue">HELLO!!!</h1>
       <h2 style = "color: Black">HELLO!!!</h2>
+      <ul>
+      	<li>Test1</li>
+      	<li>Test2</li>
+      </ul> 
 	</body>
 </html>
