added link to style.css

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>True Page</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 	<body>	
-      <h1 style = "color: Blue">HELLO!!!</h1>
+      <h1>HELLO!!!</h1>
       <h2 style = "color: Black">HELLO!!!</h2>
       <ul>
       	<li>Test1</li>
       	<li>Test2</li>
       	<li>Test3</li>
-      	<li></li>
+      	<li>Test4</li>
       </ul> 
 	</body>
 </html>
